--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>im a gamer and an archer forfun. I work at ikea</p>
+      <p>im a gamer and I work at ikea</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Las cruces New Mexico and I was mostly raised in illionis </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like playing video games, Going to the nearest archery range. Driving is something deeply enjoy too!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>i want to be a cyber security specialist and then eventually open up a bar and bartend there.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Phoenix, Arizona </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be able to start a good career</p>
     </section>
 
     <footer id="footer">
